# rvcr

./: Cargo.toml  README.md
src/: lib.rs
tests/integration/: e2e.rs  lib.rs  modifiers.rs
tests/resources/: replay.vcr.json
