[package]
name = "rvcr"
version = "0.2.2"
edition = "2024"
description = "Record-and-replay HTTP testing for requests"
repository = "https://github.com/ChorusOne/rvcr/"
authors = ["tech@chorus.one", "robert.sjoblom@fortnox.se"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[lib]
path = "src/lib.rs"
name = "rvcr"

[features]
default = []
compress = ["dep:zip"]

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
http = "1.3.1"
lazy_static = "1.5.0"
reqwest = "0.12.23"
reqwest-middleware = "0.4.2"
serde = "1.0.219"
serde_json = "1.0.143"
task-local-extensions = "0.1.4"
tracing = { version = "0.1.41", features = ["log"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
vcr-cassette = "2.0.1"
zip = { version = "4.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
url = "2.5.4"
