[package]
name = "rvcr"
version = "0.2.2"
edition = "2024"
description = "Record-and-replay HTTP testing for requests"
repository = "https://github.com/ChorusOne/rvcr/"
authors = ["tech@chorus.one", "robert.sjoblom@fortnox.se"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[lib]
path = "src/lib.rs"
name = "rvcr"

[features]
default = []
compress = ["dep:zip"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
http = "1.3"
reqwest = "0.12"
reqwest-middleware = "0.4"
serde = "1"
serde_json = "1"
task-local-extensions = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
vcr-cassette = "2"
zip = { version = "4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = "2.5"
